--- a/code/demo/flex_layout.html
+++ b/code/demo/flex_layout.html
@@ -21,7 +21,7 @@
             <i class="fa fa-home icon"></i>
             <span class="name">首页</span>
         </a>
-        <a class="navbar-item active">
+        <a class="navbar-item">
             <i class="fa fa-list icon"></i>
             <span class="name">分类</span>
         </a>
