--- a/code/bacra_ui/demo/flex_layout.html
+++ b/code/bacra_ui/demo/flex_layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../src/bacra-ui.css">
-    <title>布局</title>
+    <title>仿微信布局</title>
 </head>
 
 <body>
